apps/tubearchivist/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tubearchivist
spec:
  selector:
    matchLabels:
      app: tubearchivist
      component: web
  template:
    metadata:
      labels:
        app: tubearchivist
        component: web
    spec:
      containers:
        - name: tubearchivist
          image: docker.io/bbilly1/tubearchivist:v0.4.2
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: videos
              mountPath: /youtube
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: nfs-videos-youtube-cache
        - name: videos
          persistentVolumeClaim:
            claimName: nfs-videos-youtube
