apps/tubearchivist/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tubearchivist-web
spec:
  selector:
    matchLabels:
      app: tubearchivist
      component: web
  serviceName: tubearchivist-web-hl
  replicas: 1
  template:
    metadata:
      labels:
        app: tubearchivist
        component: web
    spec:
      containers:
        - name: tubearchivist
          image: docker.io/bbilly1/tubearchivist:v0.5.12
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 4000m
              memory: 4Gi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: videos
              mountPath: /youtube
      volumes:
        - name: videos
          persistentVolumeClaim:
            claimName: nfs-videos-youtube
  volumeClaimTemplates:
    - metadata:
        name: cache
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tubearchivist-es
spec:
  selector:
    matchLabels:
      app: tubearchivist
      component: elasticsearch
  serviceName: tubearchivist-es-hl
  replicas: 1
  template:
    metadata:
      labels:
        app: tubearchivist
        component: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.io/library/elasticsearch:8.17.2
          ports:
            - containerPort: 9200
              name: elasticsearch
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
