apps/tubearchivist/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tubearchivist
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - youtube.hubbe.club
      secretName: tubearchivist-cert
  rules:
    - host: youtube.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tubearchivist-web
                port:
                  number: 8000
